2008-11-27  Sam Steingold  <sds@gnu.org>

	* utils/varbrace.c: use {} for empty `for' body to avoid a g++ warning
	(outbuffer_off_insert): make `insert' a `const' to avoid a g++ warning

2008-11-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (REPLACE_GETTIMEOFDAY): get from configure
	(GLLIB_O, GLLIB): add gllib/gettimeofday when REPLACE_GETTIMEOFDAY=1

2008-11-27  Vladimir Tzankov  <vtzankov@gmail.com>

	do not pass heap pointers to potentially blocking system calls
	* stream.d (SOCKET-CONNECT, SYS::MAKE-SOCKET-STREAM): use
	with_string_0 instead of TheAsciz().

2008-11-26  Vladimir Tzankov  <vtzankov@gmail.com>

	allow I/O customization variables to be per thread bound
	* spvw.d: allocate per thread symvalues in pages of 1024 object.
	(main): initialize per thread symbol indexes after streams
	special variables are defined (init_streamvars()).
	(initmem): do not initialize per thread symbol indexes - it is too
	early.  stream variables are not declared special yet.

2008-11-26  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (fill_relocation_memory_regions): handle the case
	of multiple times pinned object (from many threads).
	* streams.d (rd_ch_terminal3): fix a typo - end_blocking_system_call()
	instead of begin_blocking_system_call().

2008-11-25  Sam Steingold  <sds@gnu.org>

	* predtype.d (CLASS-OF): simplify switch (Record_type(arg))

2008-11-25  Sam Steingold  <sds@gnu.org>

	* predtype.d (TYPE-OF, CLASS-OF, heap_statistics_mapper) [MULTITHREAD]:
	support THREAD, MUTEX, EXEMPTION
	* constsym.d (hs_thread, hs_mutex, hs_exemption) [MULTITHREAD]: add
	* describe.lisp (describe-object@t) [MT]:
	handle THREAD, MUTEX, EXEMPTION

2008-11-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (create_thread): fill thread's _object_tab with NILs.
	(for_all_threadobjs): fix _object_tab iteration.
	* zthread (MAKE-THREAD): initialize the reader after the threads
	lock is released (prevents deadlock if other thread tries to trigger